# SkySkrapers

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _astylerc
include/skyskrapers/: city.h  methods.h  skyskrapers.h  street.h  tower.h
src/: CMakeLists.txt  main.c  skyskrapers.c  skyskrapers.h
src/core/: city.c  street.c  tower.c
src/methods/: bruteforce.c  exclude.c  first_of_two.c  obvious.c  slope.c  staircase.c  step_down.c
tests/: CMakeLists.txt  test_solver.c
